[package]
name = "natsclient"
version = "0.0.3"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
description = "NATS client designed for both an ergonomic API and performance"
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/encabulators/natsclient"
documentation = "https://docs.rs/natsclient"
repository = "https://github.com/encabulators/natsclient"
readme = "README.md"
keywords = ["nats", "client", "natsclient", "async", "stan"]
categories = ["network-programming", "api-bindings"]

#travis-ci = { repository = "encabulators/natsclient", branch = "master" }


[dependencies]
derive_builder = "^0.7"
nkeys = "0.0.4"
url = "1.7"
rand = "0.6.5"
nats-types = "0.1.8"
# nats-types = { path = "../nats-types"} 
data-encoding = "2.1.2"
crossbeam-channel = "0.3.8"
crossbeam = "0.7.1"
crossbeam-utils = "^0.6.5"
nuid = "0.2.0"
log = "^0.4.6"
regex = "1.1.6"

[dev-dependencies]
pretty_env_logger = "0.3.0"
serde_json = "^1.0.39"
serde_derive = "^1.0.90"
serde = "^1.0.90"

[[example]]
name = "marketclient"

[[example]]
name = "marketservice"