[package]
name = "natsclient"
version = "0.0.7"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
description = "NATS client designed for both an ergonomic API and performance"
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/encabulators/natsclient"
documentation = "https://docs.rs/natsclient"
repository = "https://github.com/encabulators/natsclient"
readme = "README.md"
keywords = ["nats", "client", "natsclient", "async", "stan"]
categories = ["network-programming", "api-bindings"]

[badges]
travis-ci = { repository = "encabulators/natsclient", branch = "master" }


[dependencies]
derive_builder = "0.9.0"
nkeys = "0.0.9"
url = "2.1.1"
rand= "0.7.3"
nats-types = "0.1.8"
data-encoding = "2.2.0"
crossbeam-channel = "0.4.2"
crossbeam = "0.7.3"
crossbeam-utils = "^0.7.0"
nuid = "0.2.1"
log = "^0.4.6"
regex = "1.3.5"

[dev-dependencies]
pretty_env_logger = "0.4.0"
serde_json = "^1.0.39"
serde_derive = "^1.0.90"
serde = "^1.0.90"

[[example]]
name = "marketclient"

[[example]]
name = "marketservice"
